--- a/style.css
+++ b/style.css
@@ -331,7 +331,7 @@ tr:hover a {
   position: relative;
   width: 16px;
   height: 16px;
-  background-image: url('../img/info-icon.svg');
+  background-image: url('img/info-icon.svg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
